# deribit-data-downloader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  trigger-progressive-deploy.yml
deploy/systemd/: deribit-sync-docker.service  deribit-sync-docker.timer
docs/: DATA_DICTIONARY.md
examples/: daily_sync.py
src/deribit_data/: __init__.py  audit.py  checkpoint.py  cli.py  config.py  dead_letter.py  fetcher.py  manifest.py  models.py  reconciliation.py  schema.py  storage.py  validator.py
tests/: __init__.py  conftest.py  test_audit.py  test_checkpoint.py  test_config.py  test_dead_letter.py  test_fetcher.py  test_manifest.py  test_schema.py  test_storage.py
