[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deribit-data-downloader"
version = "0.1.0"
description = "High-performance Deribit options data downloader with crash recovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sam", email = "sam@example.com" }
]
keywords = ["deribit", "options", "trading", "data", "parquet", "nautilus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
deribit-data = "deribit_data.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/deribit-data-downloader"
Repository = "https://github.com/yourusername/deribit-data-downloader"
Issues = "https://github.com/yourusername/deribit-data-downloader/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/deribit_data"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/deribit_data"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
